# CS203-Project

./: CMakeLists.txt  README.md  config.h  main.cpp
SQLiteCpp/: CMakeLists.txt
resources/classes/: Admin.cpp  Admin.h  Course.cpp  Course.h  DB.cpp  DB.h  Enrollment.cpp  Enrollment.h  Global.cpp  Global.h  Student.cpp  Student.h  System.cpp  System.h  Teacher.cpp  Teacher.h
resources/database/: project.db
resources/md/: SRS.md
